--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 08-13-04: Several skills (NB/SS/BOLT/ETC) with too high exp caused crash. [AlexKreuz]
- 08-13-04: Undefined map in PVP rank calculations caused crash. [AlexKreuz]
- 08-12-04: Bad list handling in monster skills caused crash. [AlexKreuz]
- 08-12-04: Integer overflow in guild calculations due to too high xp rate crashed server. [AlexKreuz]
- 08-12-04: Freeing scriptlist on close form crashed server. Added error-handling. [AlexKreuz]
- 08-12-04: Database load with character on missing map crashed server. [AlexKreuz]
- 08-11-04: I.S.C.S: Non ISCS user, on disconnect, crashed server. [AlexKreuz]
- 08-11-04: I.S.C.S: Removed -ISCSON/-ISCSOFF. Added ISCS menu item. [AlexKreuz]
- 08-11-04: I.S.C.S: Numerous stability fixes. [AlexKreuz]
- 08-10-04: R.E.E.D: Character deletion did not remove physical data. [AlexKreuz]
- 08-10-04: Bug #12: R.E.E.D character deletion caused server crash. [AlexKreuz]
- 08-10-04: I.S.C.S: Inter-Server Communication System Implemented. [AlexKreuz]
- 08-09-04: Removed unused USES and fixed a linux compile error. [Tsusai]
- 08-08-04: Fusion would not run without qtintf70.dll. Please be more careful in your work. [AlexKreuz]
- 08-07-04: Updated weiss.dpr for linux directory structure. [Tsusai]
- 08-07-04: Took out 10053/10054 error messages. Confusing the server admins. [AlexKreuz]
- 08-07-04: Modified default font style. [AlexKreuz]
- 08-07-04: Cleaned up source code file structure. [AlexKreuz]
- 08-06-04: Cleaned up cross platform USES. [Tsusai]
- 08-05-04: Another class type usage cross platform fix. [Tsusai]
- 08-05-04: Forgot to update how directories work in Linux. [Tsusai]
- 08-05-04: Finished organizing USES for future linux development. [Tsusai]
- 08-02-04: Organized Main's USES area for future linux development. [Tsusai]